
2005-09-25
	* data/translations/de_DE.nut
	fixed translations
	
=== ppracer 0.5 alpha ===

2005-09-25
	* src/videoconfig.cpp
	fixed fullscreen checkbox
	check resolution for min width/height
	check duplication of resolutions 

	* configure.in src/ppracer.h
	changed version to 0.5alpha
	
	* src/main.cpp
	fixed custom data_dir

2005-09-24  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/ui/uimgr.cpp
	fixed handling of mousewheel
		
	* src/screenshot.cpp
	save files in the right directory

2005-09-23  Volker Stroebel <volker@planetpenguin.de>
	* src/phys_sim.cpp/h src/nmrcl.cpp/
	cleanups in physical simulation and ODESolver
	removed unused solver

2005-09-22  Volker Stroebel <volker@planetpenguin.de>
	* src/tux.cpp/h src/keyframe.cpp/h
	add support for multiple models

	* src/racingmode.cpp
	draw all players in multiplayer mode

2005-09-21  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	several small fixes and code cleanups

2005-09-20  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/sv_SE.nut
	updated swedish translation
	
	* src/ppogl/audio/*
	fixed compilation without SDL_mixer

2005-09-18  Volker Stroebel <volker@planetpenguin.de>
	* data/courses/* data/events/*
	updated color palettes for element images
	
	* src/track_marks.* src/*
	added multiplayer support to trackmarks
	
	* src/mirror_course.* src/load_course.cpp
	fixed crash in course mirroring

2005-09-17  Volker Stroebel <volker@planetpenguin.de>
	* data/courses/* data/events/*
	fixed reset points in element images

2005-09-14  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/*
	added swedish translations
	updated language files

2005-09-13  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	added experimental (hidden) multiplayer support

2005-09-12  Volker Stroebel <volker@planetpenguin.de>
	* src/racingmode.*
	added class RacingMode as subclass for all Modes during a race
	
	* src/*
	added splitscreen support
	several preparations for multiplayer	
